Updates to Helidon Common, Part 2 (#4718)
Preparation for Loom based server.
Changes to common, common HTTP, common media types and fixes in all impacted modules.